--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   color: #111;
   background-image: url(back.jpg);
   background-size: cover;
+  overflow: hidden;
 }
 
 h1 {
@@ -41,13 +42,22 @@ a:hover {
   transition: all 0.5s;
 }
 
-iframe {
-  opacity: 0.3;
-  position: absolute;
-  left: 0;
+#vid-wrapper {
+  position: fixed;
   top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
+}
+
+iframe {
+  opacity: 0.5;
+  position: absolute;
+  left: -50%;
+  top: -50%;
+  right: 0;
+  bottom: 0;
+  width: 200%;
+  height: 200%;
 }
