--- a/style.css
+++ b/style.css
@@ -1,32 +1,56 @@
 body {
   background-color: #000;
-  background-image: url(patched-visual.gif);
-  background-size: 50%;
+  background-image: url(squares.png);
   margin: 0;
-  font-family: Oswald;
+  font-family: Arial, sans-serif;
   color: #fff;
+}
+
+video {
+  width: 100%;
+  position: fixed;
+  top: -200px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
 #wrapper {
-  width: 320px;
-  margin: 40px auto;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
-a {
+#links {
+  margin-top: 20vh;
+  text-align: center;
+}
+
+#links a {
   display: inline-block;
-  padding: 3px;
-}
-
-a {
+  margin: 10px;
   text-decoration: none;
-  color: rgba(255, 214, 203, 0.8);
+  color: #fff;
   text-transform: uppercase;
-  font-size: 2.3rem;
-  line-height: 2.8rem;
-  margin: 0 10px;
+  font-size: 1.5rem;
+  line-height: 1.8rem;
+  margin: 0 30px;
+  filter: drop-shadow(0 0 1px #fff)
+        drop-shadow(0 0 3px #fff)
+        drop-shadow(0 0 5px #f31de6)
+        drop-shadow(0 0 8px rgba(243, 29, 230, 0.6));
+  -webkit-filter: drop-shadow(0 0 1px #fff)
+        drop-shadow(0 0 3px #fff)
+        drop-shadow(0 0 5px #f31de6)
+        drop-shadow(0 0 8px rgba(243, 29, 230, 0.6));
+  transition: all 0.5s;
 }
 
-a:hover {
-  color: #fff;
+#links a:hover {
+  color: #111;
   transition: all 0.5s;
 }
