--- a/style.css
+++ b/style.css
@@ -1,36 +1,18 @@
 body {
   background: linear-gradient(45deg, rgb(40, 190, 110), rgb(40, 180, 220));
   margin: 0;
-  font-family: 'Bungee Hairline', cursive;
+  padding: 0;
+  font-family: 'Sura', Arial;
   color: #fff;
   background-attachment: fixed;
   min-height: 300px;
 }
 
-h1 {
-  margin: 0;
-  font-size: 1.3rem;
-  padding: 20px 10px 5px 10px;
-  width: 60vw;
-}
-
-.neon {
-  filter: drop-shadow(0 0 1px #fff)
-        drop-shadow(0 0 2px #fff)
-        drop-shadow(0 0 4px rgba(255, 119, 237, 0.8))
-        drop-shadow(0 0 6px rgba(155, 219, 237, 0.8));
-  -webkit-filter: drop-shadow(0 0 1px #fff)
-        drop-shadow(0 0 2px #fff)
-        drop-shadow(0 0 4px rgba(255, 119, 237, 0.8))
-        drop-shadow(0 0 6px rgba(155, 219, 237, 0.8));
-}
-
 iframe {
   border: 0;
-  margin-top: 10px;
   width: 100vw;
-  height: 75vh;
-  min-height: 200px;
+  height: 100vh;
+  width: 100%;
 }
 
 a {
@@ -38,7 +20,7 @@ a {
   padding: 1px 4px;
   margin: 2px 1px;
   display: inline-block;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1.2rem;
   color: #eee;
   -webkit-transition: 2s all;
@@ -46,7 +28,7 @@ a {
 }
 
 a:hover {
-  background-color: rgba(255, 10, 30, 0.8);
+  background-color: rgba(235, 10, 30, 0.8);
   -webkit-transition: 0.5s all;
   transition: 0.5s all;
 }
@@ -56,16 +38,24 @@ a:hover {
   min-height: 50vh;
 }
 
-img {
-  position: absolute;
-  width: 20vw;
-  max-width: 200px;
-  min-width: 140px;
-  right: 0;
+#links {
+  position: fixed;
   top: 0;
-  z-index: 2;
+  right: 3px;
+  background-color: rgba(200, 200, 10, 0.86);
+  width: 100px;
+  padding: 2px;
+  border-bottom-right-radius: 10px;
 }
 
-#links {
-  text-align: right;
+#links a {
+  color: #444;
+}
+
+#links a:hover {
+  color: #ccc;
+}
+
+img {
+  width: 100%;
 }
